yaml/ns.yaml
  apiVersion: v1
  kind: Namespace
  metadata: 
    name: wo-ns
    labels: 
      name: wo-ns
