yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-front
spec:
  selector:
    role: lb-front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
